--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic Node.js App</title>
+</head>
+<body>
+    <h1>Welcome to Basic Node.js App</h1>
+    <p>This is a basic HTML file served by a Node.js application.</p>
+</body>
+</html> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,5 +20,6 @@
 <body>
     <h1>Welcome to Basic Node.js App</h1>
     <p>This is a basic HTML file served by a Node.js application.</p>
+    <a href="about.html">About</a>
 </body>
 </html>
